alignement de barre de recherche mode responsive et correction faute  titre h1

--- a/style.css
+++ b/style.css
@@ -545,6 +545,7 @@ ul {
     }
 
 @media (max-width: 767.98px) {
+
      html{
         max-width: 767.98px;
         min-height: 321px;
@@ -599,15 +600,21 @@ ul {
     }
         
     .recherches {
-        padding: 0 20px;
+        padding: 0 0px 0 20px;
         margin-top: 30px;
         margin-left: 10px;
-        margin-right: 30px;
+        margin-right: 27px;
      }
         
+
+     .texte-acceuil {
+        margin-right: 13px; /* Marges différentes pour les petits écrans */
+    }
     .texte-recherche input {
         width: 100%;
         height: 48px;
+       
+
                 
      }
     .texte-recherche{
@@ -626,15 +633,16 @@ ul {
         align-items: center;
         justify-content: center;
         border: none;
-        border-radius: 15px 15px 15px 15px;
-        height: 50px;
-        width: 55px;
+        border-radius: 15px 16px 15px 16px;
+        height: 49px;
+        width: 49px;
         background-color: #0065FC;
         color: white;
         font-size: 20px;
         font-weight: 700px;
         line-height: 21.13px;
         cursor: pointer; /* Ajouter un curseur pointer pour indiquer que l'icône est cliquable */
+        filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.25));
                
      }
             
